--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/github.com/angyalz/eggShell#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
