--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,4 @@ LOG_LEVEL_FILE = info
 ACCESS_TOKEN_SECRET=very_secret_string_for_this_famous_eggShell_app
 REFRESH_TOKEN_SECRET=another_secret_string_for_this_famous_eggShell_app
 TOKEN_EXPIRY=20m
+REFRESH_EXPIRY=60m
