fix prod dbuser

--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DB_USER = egshellDBadmin
+DB_USER = eggshellDBadmin
 DB_PASSWORD = escMPXZAyErKVY6x
 DB_HOST = cluster0.ziyex.mongodb.net/eggshell?retryWrites=true&w=majority
 LOG_LEVEL_CONSOLE = debug
