change pord port to 8080

--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   "description": "eggshell App with Angular frontend and node.js express backend",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node src/index.js",
+    "start": "cross-env NODE_ENV=production node src/index.js",
     "start:server": "nodemon src/index.js",
     "start:server-prod": "cross-env NODE_ENV=production node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
