fix start command

--- a/api/package.json
+++ b/api/package.json
@@ -8,9 +8,9 @@
   "description": "eggshell App with Angular frontend and node.js express backend",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node src/index.js",
+    "start": "NODE_ENV=production node src/index.js",
     "start:server": "nodemon src/index.js",
-    "start:server-prod": "cross-env NODE_ENV=production node src/index.js",
+    "deploy": "git subtree push --prefix api heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
